k8s/applications/web/opencloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencloud
  namespace: opencloud
  labels:
    app.kubernetes.io/name: opencloud
    app.kubernetes.io/part-of: opencloud
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: opencloud
  ports:
    - name: http
      appProtocol: http
      port: 9200
      targetPort: http
      protocol: TCP
