k8s/applications/web/opencloud/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencloud
  namespace: opencloud
  labels:
    app.kubernetes.io/name: opencloud
    app.kubernetes.io/part-of: opencloud
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - opencloud.k8s.eudald.gr
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=15552000; includeSubDomains
      backendRefs:
        - name: opencloud
          port: 9200
